feat(消息模块): 添加会员和店铺消息功能并统一表名前缀
实现会员和店铺消息管理功能，包括：
1. 新增消息状态枚举和消息实体
2. 添加消息DTO、控制器和服务
3. 实现消息CRUD和统计功能
4. 统一数据库表名前缀为mall_
5. 添加RabbitMQ消息通知支持
6. 提供批量操作和广播消息功能
7. 更新开发文档中的表名示例
8. 添加表名重命名脚本

--- a/开发终章文档.md
+++ b/开发终章文档.md
@@ -322,7 +322,7 @@ export class JwtAuthGuard implements CanActivate {
 
 ```java
 // Java版本：商品分类实体
-@TableName("li_category")
+@TableName("mall_category")
 public class Category extends BaseEntity {
     @TableId(type = IdType.ASSIGN_ID)
     private String id;
@@ -385,7 +385,7 @@ export class Category extends BaseEntity {
 
 ```java
 // Java版本：订单实体
-@TableName("li_order")
+@TableName("mall_order")
 public class Order extends BaseEntity {
     @TableId(type = IdType.ASSIGN_ID)
     private String id;
